AppEmployeesV2 with Entity framework

--- a/WebAppEmployeesV2/Web.config
+++ b/WebAppEmployeesV2/Web.config
@@ -6,8 +6,9 @@
 <configuration>
   <configSections />
   <connectionStrings>
-        <add name="ConnString" connectionString="Data Source=.\SQLEXPRESS; Initial Catalog=GlobalGio; Integrated Security=SSPI; Persist Security Info=true; MultipleActiveResultSets=true;" providerName="System.Data.SqlClient"/>
-    </connectionStrings>
+    <add name="ConnString" connectionString="Data Source=.\SQLEXPRESS; Initial Catalog=GlobalGio; Integrated Security=SSPI; Persist Security Info=true; MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
+    <add name="GlobalGioEntities" connectionString="metadata=res://*/EmployeeModel.csdl|res://*/EmployeeModel.ssdl|res://*/EmployeeModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=CTSCO2CE3250TQB\SQLEXPRESS;initial catalog=GlobalGio;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
